Moved the 2 buttons kind of where I want them to be

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ h1 {
 }
 input {
     position: absolute;
-    left: 50%;
-    top: 35%;
+    left: 47%;
+    top: 38%;
+}
+div {
+    position: absolute;
+    left: 46%;
+    top: 46%;
+
 }
