Finished, not great, not terrible, meh for now

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ footer{
     display: flex;
     justify-content: space-between;
     padding-top: 50px;
-    background-color: #A0A0A0;
+    background-color: #b0b0b0;
     
 }
 li a:hover {
